<resources>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="about_app">
        Democracy Droid! provides easy access to the Democracy Now broadcast and individual story feed, live stream, and downloads.
        Long-click on a broadcast to show its options.
        \n\nThis application is free and open-source software (GPLv3).
        \n
    </string>
    <string name="about_dm">
        Democracy Now! is a national, daily, independent, award-winning news program hosted by journalists Amy Goodman and Juan Gonzalez, pioneering the largest public media collaboration in the U.S.
        \n\nDemocracy Now! is licensed under the Creative Commons Attribution-NonCommercial-NoDerivs 3.0 United States License.
        \n\nDemocracy Now! streams live weekdays at 8 am.
        \n
    </string>
    <string name="about_info">
        \nFile bugs by email or the issue tracker at the source repository below.
        \n\nAny and all feedback is greatly appreciated :).
        \n
    </string>
    <string name="about_title">About Democracy Droid</string>
    <string name="action_site">Visit democracynow.org</string>
    <string name="connect_error">Connection error</string>
    <string name="setting_tab">Default tab on startup</string>
    <string name="name_setting">Settings</string>
    <string name="setting_stream">Default stream on select</string>
    <string name="pref_category_info">About</string>
    <string name="pref_category_settings">Application settings</string>
    <string name="review">Review on Play Store</string>
    <string name="story_audio">Listen to story</string>
    <string name="story_video">Watch story</string>
    <string name="action_browser">Open in browser</string>
    <string name="source">View source code</string>
    <string name="about_dm_header">About Democracy Now!</string>
    <string name="about_dev_header">Developer info</string>
    <string name="whatsnew">
        ==== 4.3.0\n
        - Fixed the media playing! Things had gotten out of date\nn
        ==== 4.1.0\n
        - Downloads are back! I\'m sorry it took so long!\n\n
        ==== 4.0.0\n
        - Thank you @TacoTheDank to the many code quality improvements!!\n
    </string>
    <string name="open_stream">Default application to play media</string>
    <string name="open_elsewhere">Open elsewhere</string>
    <string name="stream">Stream</string>
    <string name="read_description">Read description</string>
    <string name="share_link">Share link</string>
    <string name="email_dev">Email the developer</string>
    <string name="action_exclusives">Web Exclusives</string>
    <string name="setting_language">Difusión de Audio en Español</string>
    <string name="description_menu_title">Description</string>
    <string name="share">Share</string>
    <string name="channel_name">com.workingagenda.democracydroid</string>
    <string name="close">Close</string>

    <string name="source_code">Source code &amp; issue tracker</string>
    <string name="software_license">Software License</string>
    <string name="software_license_summ">GNU General Public License v3</string>
    <string name="app_version_text">App version</string>
    <string name="content_license">Content license</string>
    <string name="content_license_summ">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 United States</string>
    <string name="contact_democracy_now">Contact Democracy Now!</string>
    <string name="contact_democracy_now_summ">Click here to contact Democracy Now! at democracynow.org</string>
    <string name="publisher_info">Publisher information</string>
    <string name="publisher_info_summ">Democracy Now! is a national, daily, independent, award-winning news program hosted by journalists Amy Goodman and Juan Gonzalez.</string>
    <string name="preference_stream">%s stream</string>
    <string name="preference_tab">%s tab</string>
    <string name="spanish_broadcast_summ">Spanish language Audio broadcast</string>
    <string name="what_is_new">What\'s new in this version</string>
    <string name="what_is_new_summ">Features and bug fixes (press here)</string>
    <string name="tab_transcripts">Transcripts</string>
    <string name="tab_broadcasts">Broadcasts</string>
    <string name="tab_downloads">Downloads</string>
    <string name="download_tab_description">
        Long click an episode to download, share, read description, and stream.
        Long click a download to open it in an external player.</string>
    <string name="downloads_removed">Downloads removed</string>
    <string name="delete_all_downloads">Delete all downloads</string>
    <string name="delete_all_downloads_text">Are you sure you want to delete all episodes?\nLong click an episode to delete them individually.</string>
    <string name="democracy_now">Democracy Now!</string>
    <string name="stream_audio">Stream Audio</string>
    <string name="stream_video">Stream Video</string>
    <string name="stream_in_another_app">Stream in another app</string>
    <string name="stream_in_this_app">Stream in this app</string>
    <string name="live_stream_download_failed">Live stream couldn\'t be downloaded</string>
    <string name="download">Download</string>
    <string name="download_episode_confirmation">Download today\'s episode?</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="the_war_and_peace_report">The War and Peace Report</string>
    <string name="democracy_now_story">Democracy Now! Story</string>
    <string name="playlist_url">http://democracynow.videocdn.scaleengine.net/democracynow-iphone/play/democracynow/playlist.m3u8</string>
    <string name="starting_download_of">\"Starting download of \"</string>
    <string name="todays_broadcast">Today\'s Broadcast</string>
    <string name="stream_live">Stream Live</string>
    <string name="logo_url">https://upload.wikimedia.org/wikipedia/en/thumb/0/01/Democracy_Now!_logo.svg/220px-Democracy_Now!_logo.svg.png</string>
    <string name="episode_url">http://m.democracynow.org/</string>
    <string name="error_episode_not_available">Episode isn\'t available yet! Try again in a few minutes.</string>
    <string name="open_in_builtin">Built-in media player</string>
    <string name="open_in_another">Another application</string>
    <string name="whats_new">What\'s New</string>
    <string name="clear_all">Clear all</string>
    <string name="download_audio">Download audio</string>
    <string name="download_video">Download video</string>
    <string name="delete">Delete</string>
    <string name="play_in_external_player">Play in external player</string>
    <string-array name="tabsAlias">
        <item>@string/tab_transcripts</item>
        <item>@string/tab_broadcasts</item>
        <item>@string/tab_downloads</item>
    </string-array>
    <string-array name="tabs">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="streamAlias">
        <item>@string/video</item>
        <item>@string/audio</item>
    </string-array>
    <string-array name="stream">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="openAlias">
        <item>@string/open_in_builtin</item>
        <item>@string/open_in_another</item>
    </string-array>
    <string-array name="open">
        <item>0</item>
        <item>1</item>
    </string-array>
</resources>
